--- a/views/account.ejs
+++ b/views/account.ejs
@@ -1,2 +1,2 @@
-<p>Username: <%= user.username %></p>
-<p>Name: <%= user.name %></p>
+<p>Nome: <%= user.nomeAluno %></p>
+<p>Codigo Pessoa: <%= user.codPessoa %></p>
