--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,48 +11,44 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/base.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/sign-in-modules.css">
 </head>
+
 <body>
 
-<!-- HTML login screen form -->
-<form action="/login" method="post" class="pure-form pure-form-stacked">
-  <fieldset>
-    <!-- Upper box with Title, username, and password -->
-    <div class="upper-box">
-      <!-- Title -->
-      <div>
-        <h1 class="title-padding">Authorization Server</h1>
-      </div>
-      <div class="pure-control-group">
-        <!-- Username label and input -->
-        <label class="labels" for="name">Username:</label>
+  <!-- HTML login screen form -->
+  <form action="/login" method="post" class="pure-form pure-form-stacked">
+    <fieldset>
+      <!-- Upper box with Title, username, and password -->
+      <div class="upper-box">
+        <!-- Title -->
+        <div>
+          <h1 class="title-padding">Login</h1>
+        </div>
+        <div class="pure-control-group">
+          <!-- Username label and input -->
+          <label class="labels" for="name">Número RA:</label>
 
-        <div class="input-fields">
-          <input class="pure-input-1 input-fields" id="name" type="text" placeholder="Hint: bob" name="username"/>
+          <div class="input-fields">
+            <input class="pure-input-1 input-fields" id="name" type="text" name="username" />
+          </div>
+        </div>
+        <div class="pure-control-group">
+          <!-- Password label and input -->
+          <label class="labels" for="password">Password:</label>
+
+          <div class="input-fields">
+            <input class="pure-input-1 input-fields" id="password" type="password" name="password" />
+          </div>
         </div>
       </div>
-      <div class="pure-control-group">
-        <!-- Password label and input -->
-        <label class="labels" for="password">Password:</label>
-
-        <div class="input-fields">
-          <input class="pure-input-1 input-fields" id="password" type="password" placeholder="Hint: secret"
-                 name="password"/>
+      <!-- Bottom box with Sign in -->
+      <div class="bottom-box">
+        <div class="pure-controls sign-in-button">
+          <button type="submit" value="Submit" class="pure-button pure-button-primary">Sign in</button>
         </div>
       </div>
-    </div>
-    <!-- Bottom box with Sign in -->
-    <div class="bottom-box">
-      <div class="pure-controls sign-in-button">
-        <button type="submit" value="Submit" class="pure-button pure-button-primary">Sign in</button>
-      </div>
-    </div>
-  </fieldset>
-  <div class="from-text">
-    <a href="https://github.com/FrankHassanabad/Oauth2orizeRecipes">
-      From OAuth2OrizeRecipes
-    </a>
-  </div>
-</form>
+    </fieldset>
+  </form>
 
 </body>
+
 </html>
