--- a/views/dialog.ejs
+++ b/views/dialog.ejs
@@ -4,7 +4,7 @@
 <form action="/dialog/authorize/decision" method="post">
   <input name="transaction_id" type="hidden" value="<%= transactionId %>" />
   <div>
-    <input type="submit" value="Allow" id="allow" />
-    <input type="submit" value="Deny" name="cancel" id="deny" />
+    <input type="submit" value="Sim" id="allow" />
+    <input type="submit" value="Não" name="cancel" id="deny" />
   </div>
 </form>
