--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>OAuth2orize Example</title>
+    <title>OAuth2.0 Server</title>
   </head>
   <body>
     <%- body %>
