--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,15 +1,14 @@
 <form action="/login" method="post">
 	<div>
-  	<label>Username:</label>
+  	<label>R.A:</label>
   	<input type="text" name="username" /><br/>
 	</div>
 	<div>
-  	<label>Password:</label>
+  	<label>Senha:</label>
   	<input type="password" name="password" />
 	</div>
 	<div>
-	  <input type="submit" value="Submit" />
+	  <input type="submit" value="Login" />
 	</div>
 </form>
-<p><small>Hint - bob:secret</small></p>
-<p><small>Hint - joe:password</small></p>
+
