--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,14 +1,37 @@
-<form action="/login" method="post">
-	<div>
-  	<label>R.A:</label>
-  	<input type="text" name="username" /><br/>
-	</div>
-	<div>
-  	<label>Senha:</label>
-  	<input type="password" name="password" />
-	</div>
-	<div>
-	  <input type="submit" value="Login" />
-	</div>
-</form>
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>Alexa Login</title>
+    <!-- Needed for mobile sites to work -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://www.lyceum.com.br/wp-content/uploads/2018/09/cropped-midias_azul_png-192x192.png" sizes="192x192" />
+    <!-- Style sheets -->
+    <link rel="stylesheet" type="text/css" href="../styles/login.css">
+
+</head>
+
+<body>
+    <div class="login-box">
+        <img src="/img/lyceum.png" alt="Lyceum">
+
+        <form action="/login" method="post">
+            <div class="user-box">
+                <input type="text" name="username" required="" />
+                <label>Número R.A</label>
+
+            </div>
+            <div class="user-box">
+                <input type="password" name="password" required="" />
+                <label>Senha</label>
+
+            </div>
+            <div>
+                <input type="submit" value="Entrar" />
+            </div>
+        </form>
+    </div>
+
+</body>
+
+</html>
